Create the basic layout

--- a/app/views/dummies/index.html.erb
+++ b/app/views/dummies/index.html.erb
@@ -1,5 +1,4 @@
-<p id="notice"><%= notice %></p>
-
+<div class='container'>
 <h1>Listing Dummies</h1>
 
 <table>
@@ -25,3 +24,10 @@
 <br>
 
 <%= link_to 'New Dummy', new_dummy_path %>
+
+<div>
+  <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo accusantium excepturi aliquid fugiat saepe, in quod deserunt! Similique quas sunt, dolores libero eos explicabo tempora voluptates voluptate aut natus sequi.</h1>
+
+</div>
+
+</div>
