--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -62,6 +62,20 @@
 			</div>
 		</div>
 		<!--슬라이드3-->
+
+			<!--슬라이드4-->
+		<div class="item"> 
+			<img src=/img/mi4.png
+			 style="width:100%" data-src="" alt="Forth slide">
+			<div class="container">
+				<div class="carousel-caption">
+					<h1>Slide 4</h1>
+					<p>텍스트 4</p>
+				</div>
+			</div>
+		</div>
+		<!--슬라이드4-->
+	</div> 
 	</div>
 	
 
