Implement simple full video or image cover

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,14 @@
-<div class="container">
-  <h1>Welcome to Treview</h1>
+
+<div class="container home">
+  <div class="row text-center">
+    <div class="col-md-12">
+      <h1>Video for Traveller</h1>
+    </div>
+  </div>
 </div>
+
+<div id="background"></div>
+
+<!-- <video autoplay loop muted id="background">
+  <source src="http://techslides.com/demos/sample-videos/small.mp4" type="video/mp4">
+</video> -->
