--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,6 +5,17 @@
       <h1>Video for Traveller</h1>
     </div>
   </div>
+
+  <div class="row search">
+    <div class='col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3'>
+      <div class="input-group">
+        <input type="text" class="form-control typeahead" placeholder="Midnight in Paris" >
+        <span class="input-group-btn">
+          <button class="btn btn-danger search" type="button">Go</button>
+        </span>
+      </div>
+    </div>
+  </div>
 </div>
 
 <div id="background"></div>
