--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,7 +6,7 @@
     </div>
   </div>
 
-  <div class="row search">
+  <div class="row travel_search" data-travels="<%= @travels.to_json %>">
     <div class='col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3'>
       <div class="input-group">
         <input type="text" class="form-control typeahead" placeholder="Midnight in Paris" >
