--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -17,9 +17,9 @@
     </div>
   </div>
 </div>
-
-<div id="background"></div>
+  <div id="background"></div>
 
 <!-- <video autoplay loop muted id="background">
   <source src="http://techslides.com/demos/sample-videos/small.mp4" type="video/mp4">
-</video> -->
+</video>
+ -->
