--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -19,7 +19,6 @@
 </div>
   <div id="background"></div>
 
-<!-- <video autoplay loop muted id="background">
+<video autoplay loop muted id="background">
   <source src="http://techslides.com/demos/sample-videos/small.mp4" type="video/mp4">
 </video>
- -->
