--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -3,7 +3,11 @@
   <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <a class="navbar-brand" href="/">Treview</a>
+      <% if params[:for].present? %>
+        <a class="navbar-brand" href="/">Treview for <%= params[:for] %></a>
+      <% else %>
+        <a class="navbar-brand" href="/">Treview</a>
+      <% end %>
 
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
