--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,7 +3,7 @@
   <div id="fullpage">
     <div class="section " id="section0">
       <video autoplay loop muted id="myVideo">
-        <source src="assets/flowers.mp4" type="video/mp4">
+        <source src="img/mainVideo.mp4" type="video/mp4">
         <source src="assets/flowers.webm" type="video/webm">
       </video>
 
