--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -12,7 +12,7 @@
   width: auto;
   height: auto;
   z-index: -100;
-  @include translate(-50%, -50%);
+  @include translate(-50%, -50%); // translate?
   background: url(/assets/sample.jpg) no-repeat;
   background-size: cover;
 }
