--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,7 +4,7 @@
     <div class="section " id="section0">
       <video autoplay loop muted id="myVideo">
         <source src="img/mainVideo.mp4" type="video/mp4">
-        <source src="assets/flowers.webm" type="video/webm">
+        <source src="assets/flowers.webm" type="video/webm"> <!-- webm? -->
       </video>
 
       <div class="layer">
