--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,9 @@
-
 <div class="container-fluid home">
   <div id="fullpage">
     <div class="section " id="section0">
       <video autoplay loop muted id="myVideo">
-        <source src="img/mainVideo.mp4" type="video/mp4">
-        <source src="assets/flowers.webm" type="video/webm"> <!-- webm? -->
+        <source src="assets/mainVideo.mp4" type="video/mp4">
+        <source src="assets/mainVideo.webm" type="video/webm"> <!-- webm? -->
       </video>
 
       <div class="layer">
