--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -20,5 +20,5 @@
   <div id="background"></div>
 
 <video autoplay loop muted id="background">
-  <source src="http://techslides.com/demos/sample-videos/small.mp4" type="video/mp4">
+  <source src="/assets/mainVideo.mp4" type="video/mp4">
 </video>
