--- a/app/views/admin/travels/_form.html.erb
+++ b/app/views/admin/travels/_form.html.erb
@@ -1,16 +1,26 @@
 <h1><%= title %></h1>
 
 <div class="row">
-  <div class="col-sm-6">
-    <%= form_for travel, url: url do |f| %>
+  <%= form_for travel, url: url do |f| %>
+    <div class="col-sm-8">
       <div class="form-group field">
-        <%= f.label :name, 'Subject' %>
-        <%= f.text_field :name, class: 'form-control' %>
+        <%= f.text_field :todo, placeholder: 'To do', class: 'form-control' %>
+      </div>
+
+      <div class="form-group field">
+        <%= f.select :preposition, Travel::PREPS.map {|f| [f, f.downcase]} %>
+      </div>
+
+      <div class="form-group field">
+        <%= f.text_field :place, placeholder: 'Place or City', class: 'form-control' %>
       </div>
 
       <div class="form-group">
         <%= f.submit class: "btn btn-success" %>
       </div>
-    <% end %>
-  </div>
+    </div>
+
+  <% end %>
 </div>
+
+
