--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -4,7 +4,7 @@
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <% if params[:for].present? %>
-        <a class="navbar-brand" href="/">Treview for <%= params[:for] %></a>
+        <a class="navbar-brand" href="/">Treview for <%= params[:for].gsub("-", " ") %></a>
       <% else %>
         <a class="navbar-brand" href="/">Treview</a>
       <% end %>
@@ -19,10 +19,11 @@
 
     <ul class='nav navbar-nav navbar-right collapse navbar-collapse'>
       <% if current_user %>
-        <li class='text-right'>
-          <%= link_to "My Videos", "/users/#{current_user.id_with_name}" %>
-        </li>
+        <li class='text-right'><%= link_to "My Videos", "/users/#{current_user.id_with_name}" %></li>
         <li class='text-right'><a href='/logout'>Sign out</a></li>
+        <% if current_user.admin? %>
+          <li class='text-right'><%= link_to "Admin", "/admin/travels" %><li>
+        <% end %>
       <% else %>
         <li class='text-right'><a href='/auth/facebook'>Sign in with Facebook</a></li>
         <!-- <li class='text-right'><a href='/auth/twitter'>Twitter</a></li> -->
