--- a/app/assets/stylesheets/videos.scss
+++ b/app/assets/stylesheets/videos.scss
@@ -2,7 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-div.container.videos {
+div.container.videos, div.container.user {
   div.video_thumb {
     position: relative;
     padding: 0 12px;
@@ -11,6 +11,26 @@ div.container.videos {
     img {
      display: block;
      width: 100%
+    }
+
+    a.remove, a.subscribe, a.unsubscribe {
+      display: block;
+      position: absolute;
+      top: -10px;
+      right: 2px;
+      width: 20px;
+      height: 20px;
+      font-size: 20px;
+      line-height: 1em;
+      @include border-radius(10px);
+      opacity: 0;
+    }
+
+    &:hover {
+      a.remove, a.subscribe, a.unsubscribe, div.tags a.edit_tag {
+        opacity: 1;
+        transition: all .6s ease-in-out;
+      }
     }
 
     div.about {
