--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -4,7 +4,11 @@
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <% if params[:for].present? %>
-        <a class="navbar-brand" href="/">Treview for <%= params[:for].gsub("-", " ") %></a>
+        <a class="navbar-brand" href="/"><i class='glyphicon glyphicon-home'></i></a>
+        <a class="navbar-brand" href="#">Treview for <%= params[:for].gsub("-", " ") %></a>
+      <% elsif params[:controller] == 'users' && params[:action] == 'show' %>
+        <a class="navbar-brand" href="/"><i class='glyphicon glyphicon-home'></i></a>
+        <a class="navbar-brand" href='#'><%= @user.name %>'s Treview</a>
       <% else %>
         <a class="navbar-brand" href="/">Treview</a>
       <% end %>
