--- a/app/views/videos/index.html.erb
+++ b/app/views/videos/index.html.erb
@@ -1,36 +1,8 @@
 <div class="container videos">
-
   <div class="row">
     <div class="col-sm-12">
-      <% @videos.each_with_index do |video, n| %>
-        <div class="col-xs-6 col-sm-4 col-md-3 video_thumb">
-          <div class="embed-responsive embed-responsive-16by9">
-            <a href="<%= video_path(id: video.id_with_title) %>" class="thumbnail">
-              <%= image_tag video.cover_url, class: "embed-responsive-item" %>
-            </a>
-          </div>
-
-           <div class="about">
-              <%= link_to video.title, video_path(id: video.id_with_title), class: 'title' %>
-              <span class='publisher'><i>by <%= video.uploader.name %></i></span>
-              <!-- <span class='likes text-muted'><%#= "#{Faker::Number.number(6)} likes, " %></span> -->
-              <!-- <span class='date text-muted'><%#= time_ago_in_words Faker::Time.backward(14, :evening) %> ago</span> -->
-            </div>
-        </div>
-
-        <% if (n+1) % 2 == 0 %>
-            <div class="clearfix visible-xs-block"></div>
-          <% end %>
-
-
-          <% if (n+1) % 3 == 0 %>
-            <div class="clearfix visible-sm-block hidden-xs"></div>
-          <% end %>
-
-          <% if (n+1) % 4 == 0 %>
-            <div class="clearfix visible-md-block visible-lg-block hidden-xs hidden-sm"></div>
-          <% end %>
-      <% end %>
+      <%= render "videos", videos: @videos %>
     </div>
   </div>
+
 </div>
