--- a/app/views/videos/index.html.erb
+++ b/app/views/videos/index.html.erb
@@ -4,5 +4,8 @@
       <%= render "videos", videos: @videos %>
     </div>
   </div>
-
 </div>
+
+<%= render('upload_form', user: current_user, travel: @travels.first) if current_user %>
+
+
