--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,14 +2,14 @@
 <div class="container home">
   <div class="row text-center">
     <div class="col-md-12">
-      <h1>Video for Traveller</h1>
+      <img src="/assets/mainlogo.png" class="img-responsive" alt="Responsive image">
     </div>
   </div>
 
   <div class="row travel_search" data-travels="<%= @travels.to_json %>">
     <div class='col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3'>
       <div class="input-group">
-        <input type="text" class="form-control typeahead" placeholder="Midnight in Paris" >
+        <input type="text" class="form-control typeahead" placeholder="What do you want to do?" >
         <span class="input-group-btn">
           <button class="btn btn-danger search" type="button">Go</button>
         </span>
@@ -17,7 +17,7 @@
     </div>
   </div>
 </div>
-  <div id="background"></div>
+  <div id="background"></div>  
 
 <video autoplay loop muted id="background">
   <source src="/assets/mainVideo.mp4" type="video/mp4">
