--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,8 @@
 <div class="container home">
   <div class="row text-center">
     <div class="col-md-12">
-      <h1>Video for Traveller</h1>
+      <h1>Treview</h1>
+      <h6>Review your Travel</h6>
     </div>
   </div>
 
