--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -1,8 +1,11 @@
+<header class='navbar navbar-inverse navbar-static-top header'>
+<!-- <header class='navbar navbar-default navbar-fixed-top header'> -->
 
-<nav class="navbar navbar-inverse navbar-static-top header">
-  <div class="container">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
+  <!-- <div class='container'>  -->
+  <div class='container-fluid'>
+    <div class='navbar-header'>
+ 
+
       <% if params[:for].present? %>
         <a class="navbar-brand" href="/"><i class='glyphicon glyphicon-home'></i></a>
         <a class="navbar-brand" href="#">Treview for <%= params[:for].gsub("-", " ") %></a>
@@ -33,5 +36,7 @@
         <!-- <li class='text-right'><a href='/auth/twitter'>Twitter</a></li> -->
       <% end %>
     </ul>
+
   </div>
-</nav>
+</header>
+
