--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,8 +2,12 @@
 <div class="container home">
   <div class="row text-center">
     <div class="col-md-12">
-      <h1>Treview</h1>
-      <h6>Review your Travel</h6>
+      <div class="row text-center">
+    <div class="col-md-12">
+      <img src="/assets/mainlogo.png" alt="Responsive image">
+    </div>
+  </div>
+      <h3>Review your Travel</h3>
     </div>
   </div>
 
