--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -21,7 +21,7 @@ header.header {
       float: none;
       a.navbar-brand {
         font-size: 24px;
-        color: steelblue;
+        color: white;
       }
 
       .navbar-toggle {
