--- a/app/views/videos/_videos.html.erb
+++ b/app/views/videos/_videos.html.erb
@@ -11,8 +11,8 @@
         <%= link_to raw("<i class='glyphicon glyphicon-remove-circle text-danger' data-toggle='tooltip' data-placement='bottom' title='Delete'></i>"), video, class: "remove bg-warning", method: :delete %>
       <% elsif current_user && video.user_ids.include?(current_user.id) %>
         <%= link_to raw("<i class='glyphicon glyphicon-ban-circle text-danger' data-toggle='tooltip' data-placement='bottom' title='Unsubscribe'></i>"), unsubscription_path(video_id: video.id, user_id: current_user.id), class: "unsubscribe bg-warning", method: :delete %>
-      <% else %>
-        <%= link_to raw("<i class='glyphicon glyphicon-ok-circle text-success' data-toggle='tooltip' data-placement='bottom' title='Subscribe'></i>"), subscriptions_path(video_id: video.id), class: "subscribe bg-success", method: :post %>
+      <% elsif current_user %>
+        <%= link_to raw("<i class='glyphicon glyphicon-ok-circle text-success' data-toggle='tooltip' data-placement='bottom' title='Subscribe'></i>"), subscriptions_path(video_id: video.id, user_id: current_user.id), class: "subscribe bg-success", method: :post %>
       <% end %>
 
        <div class="about">
@@ -39,4 +39,3 @@
 <% else %>
   <div class='text-center'><h1>No videos yet</h1></div>
 <% end %>
-
