--- a/app/views/videos/show.html.erb
+++ b/app/views/videos/show.html.erb
@@ -24,7 +24,7 @@
             <%= link_to 'Delete', @video, class: "btn btn-xs btn-danger", method: :delete %>
           <% elsif current_user && @video.user_ids.include?(current_user.id) %>
             <%= link_to 'Unsubscribe', unsubscription_path(video_id: @video.id, user_id: current_user.id), class: "btn btn-xs btn-danger", method: :delete %>
-          <% else %>
+          <% elsif current_user %>
             <%= link_to 'Subscribe', subscriptions_path(video_id: @video.id, user_id: current_user.id), class: "btn btn-xs btn-primary", method: :post %>
           <% end %>
         </div>
@@ -33,6 +33,10 @@
     </div>
   </div>
 </div>
+
+
+<%= render('upload_form', user: current_user, travel: @video.travel) if current_user %>
+
 
 
 
