--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,29 +1,36 @@
 
-<div class="container home">
-  <div class="row text-center">
-    <div class="col-md-12">
+<div class="fullpage-home">
+  <div class="section" id="section1">
+        <div class="container home">
       <div class="row text-center">
-    <div class="col-md-12">
-      <img src="/assets/mainlogo.png" alt="Responsive image">
-    </div>
-  </div>
-      <h3>Review your Travel</h3>
-    </div>
-  </div>
+        <div class="col-md-12">
+          <div class="row text-center">
+        <div class="col-md-12">
+          <img src="/assets/mainlogo.png" alt="Responsive image">
+        </div>
+      </div>
+          <h3>Review your Travel</h3>
+        </div>
+      </div>
 
-  <div class="row travel_search" data-travels="<%= @travels.to_json %>">
-    <div class='col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3'>
-      <div class="input-group">
-        <input type="text" class="form-control typeahead" placeholder="Midnight in Paris" >
-        <span class="input-group-btn">
-          <button class="btn btn-danger search" type="button">Go</button>
-        </span>
+      <div class="row travel_search" data-travels="<%= @travels.to_json %>">
+        <div class='col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3'>
+          <div class="input-group">
+            <input type="text" class="form-control typeahead" placeholder="Midnight in Paris" >
+            <span class="input-group-btn">
+              <button class="btn btn-danger search" type="button">Go</button>
+            </span>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-</div>
-  <div id="background"></div>
+      <!-- <div id="background"></div> -->
 
-<video autoplay loop muted id="background">
-  <source src="/assets/mainVideo.mp4" type="video/mp4">
-</video>
+    <video autoplay loop muted id="background">
+      <source src="/assets/mainVideo.mp4" type="video/mp4">
+    </video>
+  </div>
+  <div class="section" id="section2"><h1>Title 2</h1></div>
+  <div class="section" id="section3"><h1>Title 3</h1></div>
+  <div class="section" id="section4"><h1>Title 4</h1></div>
+</div>
