--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   <div id="wrapper">
     <%= render 'header' %>
 
-    <div id="fullpage-home">
+    <div id="container">
       <%= yield %>
     </div>
 
