--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -1,4 +1,4 @@
-<header class='navbar navbar-inverse navbar-static-top header'>
+<header class='navbar navbar-inverse navbar-fixed-top header'>
 <!-- <header class='navbar navbar-default navbar-fixed-top header'> -->
 
   <!-- <div class='container'>  -->
