--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -39,7 +39,9 @@
 // }
 
 #section2 {
-  background-image: image-url("bg2.jpg");
+  background-image: image-url("slush.jpg");
+  font-size: 8em;
+  color: white;
 }
 
 #section3 {
