--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,8 +3,8 @@
   <div class="section" id="section1">
       <video autoplay loop muted id="background">
       <source src="/assets/mainVideo.mp4" type="video/mp4">
-      
     </video>
+
         <div class="container home">
       <div class="row text-center">
         <div class="col-md-12">
@@ -32,7 +32,7 @@
 
 
   </div>
-  <div class="section" id="section2"><h1>Title 2</h1></div>
-  <div class="section" id="section3"><h1>Title 3</h1></div>
-  <div class="section" id="section4"><h1>Title 4</h1></div>
+  <div class="section" id="section2">Slush in Tokyo</div>
+<!--   <div class="section" id="section3"><h1>Title 3</h1></div>
+  <div class="section" id="section4"><h1>Title 4</h1></div> -->
 </div>
