--- a/app/assets/stylesheets/videos.scss
+++ b/app/assets/stylesheets/videos.scss
@@ -85,9 +85,18 @@
   }
 }
 
+// div.container.video {
 
-div.container.video {
+// }
 
+#map_info {
+
+  #sl2,
+  #sl3,
+  #sl4,
+  #sl5 {
+    display: none;
+  }
 }
 
 
