--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -28,11 +28,17 @@
         </div>
       </div>
     </div>
-      <!-- <div id="background"></div> -->
-
 
   </div>
-  <div class="section" id="section2">Slush in Tokyo</div>
-<!--   <div class="section" id="section3"><h1>Title 3</h1></div>
-  <div class="section" id="section4"><h1>Title 4</h1></div> -->
+  <div class="section" id="section2">
+      <span id="week_subject">
+        This week
+      </span>
+      <p><a href="/infomap">Slush in Tokyo</a></p>
+  </div>
+
+  <!-- <div class="section" id="section3"><h1>Title 3</h1></div> -->
+
+  <!-- <div class="section" id="section4"><h1>Title 4</h1></div> -->
+
 </div>
