--- a/app/views/videos/_videos.html.erb
+++ b/app/views/videos/_videos.html.erb
@@ -37,5 +37,11 @@
       <% end %>
   <% end %>
 <% else %>
-  <div class='text-center'><h1>No videos yet</h1></div>
+  <div class="text-center"><h1>No videos yet</h1></div>
 <% end %>
+
+    <a href="/infomap">
+    <button type="button" class="btn btn-primary" href="/infomap">
+      with Map
+    </button>
+    </a>
