--- a/app/assets/stylesheets/videos.scss
+++ b/app/assets/stylesheets/videos.scss
@@ -99,6 +99,16 @@
   }
 }
 
+table {
+  a {
+    color: #000;
+  }
+  a:hover {
+    text-decoration: none;
+    color: #000;
+  }
+}
+
 
 nav.upload {
   display: none;
