--- a/app/views/videos/_videos.html.erb
+++ b/app/views/videos/_videos.html.erb
@@ -40,8 +40,10 @@
   <div class="text-center"><h1>No videos yet</h1></div>
 <% end %>
 
-    <a href="/infomap">
-    <button type="button" class="btn btn-primary" href="/infomap">
-      with Map
-    </button>
-    </a>
+    <p id="btn_infomap">
+        <a href="/infomap">
+            <button type="button" class="btn btn-primary" href="/infomap">
+              with Map
+            </button>
+        </a>
+    </p>
