--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,19 +1,21 @@
 
 <div class="fullpage-home">
   <div class="section" id="section1">
-      <video autoplay loop muted id="background">
-      <source src="/assets/mainVideo.mp4" type="video/mp4">
-    </video>
+    <div class="video-container">
+        <video autoplay loop muted id="video-background">
+          <source src="/assets/mainVideo.mp4" type="video/mp4">
+        </video>
+    </div>
 
-        <div class="container home">
+    <div class="container home">
       <div class="row text-center">
         <div class="col-md-12">
           <div class="row text-center">
-        <div class="col-md-12">
-          <img src="/assets/mainlogo.png" alt="Responsive image">
-        </div>
-      </div>
-          <h3>Review your Travel</h3>
+            <div class="col-md-12">
+              <img src="/assets/mainlogo.png" alt="Responsive image">
+            </div>
+          </div>
+           <h3>Review your Travel</h3>
         </div>
       </div>
 
@@ -30,8 +32,9 @@
     </div>
 
   </div>
+
   <div class="section" id="section2">
-      <span id="week_subject">
+      <span>
         This week
       </span>
       <p><a href="/infomap">Slush in Tokyo</a></p>
