--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -71,11 +71,11 @@ header.header {
 
 .flash {
   position: fixed;
-  top: 0px;
+  top: 0;
   width: 100%;
-  min-height: 51px;
+  min-height: 42px;
   text-align: center;
-  z-index: 1234;
+  z-index: 9999;
 
   span {
     display: inline-block;
@@ -87,14 +87,16 @@ header.header {
 
   a.flash_close {
     display: inline-block;
-    margin-top: 14px;
+    margin-top: 12px;
     font-size: 18px;
     line-height: 27px;
     color: #9d9d9d;
   }
 }
 
-.flash.notice { background: #212121; }
+.flash.notice {
+  background: #212121;
+}
 
 .flash.warning {
   background: orange;
