--- a/app/views/videos/infomap.html.erb
+++ b/app/views/videos/infomap.html.erb
@@ -71,7 +71,7 @@
 
       <!-- Trigger the modal with a button -->
       <!-- <a href="http://localhost:3000/videos/18_slush5"> -->
-      <!-- <img src="assets/map_slush.png" id="myButton" class="img-responsive" data-toggle="modal" data-target="#myModal" alt=""> -->
+      <!-- <img src="assets/slush2016map_info.png" id="myButton" class="img-responsive" data-toggle="modal" data-target="#myModal" alt=""> -->
       <a href="/videos/14_slush_1" target="_self">
       <img src="assets/slush2016map_info.png" id="slushmaps" class="img-responsive" data-toggle="modal" data-target="#myModal1" alt=""></a>
     </div>
